[package]
name = "blockscout-service-launcher-2"
version = "0.13.1"
description = "Allows to launch blazingly fast blockscout rust services"
license = "MIT"
repository = "https://github.com/blockscout/blockscout-rs"
keywords = ["blockscout", "service", "starter", "launcher", "microservices"]
categories = ["web-programming::http-server"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.7.0", optional = true }
actix-web-prom = { version = "0.8.0", optional = true }
anyhow = { version = "1.0", optional = true }
config = { version = "0.14.0", optional = true }
futures = { version = "0.3", optional = true }
cfg-if = { version = "1.0.0", optional = true }
once_cell = { version = "1", optional = true }
opentelemetry = { version = "0.24.0"}
opentelemetry-otlp = { version = "0.17", features = ["tls", "tls-roots"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "trace"] }
opentelemetry-semantic-conventions = "0.16.0"
prometheus = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = {version = "1", optional = true }
tokio = { version = "1.40", optional = true }
tonic = { version = "0.12.2", optional = true }
tracing = { version = "0.1", optional = true }
tracing-actix-web = { package = "blockscout-tracing-actix-web", version = "0.8.0", optional = true }
tracing-opentelemetry = { version = "0.25.0", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
url = { version = "2.5", optional = true }
uuid = {version = "1", features = ["v4"], optional = true}

# Dependencies required for database initialization

sea-orm-0_12 = { package = "sea-orm", version = "0.12.2", optional = true }
sea-orm-migration-0_12 = { package = "sea-orm-migration", version = "0.12.2", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
regex = { version = "1", features = ["std"], default-features = false }


[features]
default = ["launcher", "tracing", "actix-request-id", "database-0_12"]
launcher = [
    "dep:actix-web",
    "dep:actix-web-prom",
    "dep:actix-cors",
    "dep:anyhow",
    "dep:config",
    "dep:futures",
    "dep:once_cell",
    "dep:prometheus",
    "dep:serde",
    "dep:tokio",
    "dep:tonic",
    "dep:tracing",
    "dep:tracing-actix-web",
]
tracing = [
    "dep:anyhow",
    "dep:serde",
    "dep:serde_json",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "dep:uuid",
]

# Cannot be used without corresponding sea-orm dependency.
# Choose any of `database-0_12`, `database-0_11`, `database-0_10` for the actual usage.
database = [
    "dep:anyhow",
    "dep:cfg-if",
    "dep:tracing",
    "dep:url",
]
database-0_12 = [
    "database",
    "dep:sea-orm-0_12",
    "dep:sea-orm-migration-0_12",
]

actix-request-id = []

